Resolves: tdf#104919 crash with empty ScNavigatorDlg member

commit 292560a957498bed70b625c992ec6bcf631dceb3
Author: Noel Grandin <noel.grandin@collabora.co.uk>
Date:   Mon Oct 17 13:23:23 2016 +0200

    loplugin:unusedmethods

detected the intended methods to do this were unused, so restore then, but hook
them up this time

Change-Id: I3b7e4a557696a91a70956487468b99fec6324a93